\preformatted{  > a - **b
  Error: unexpected '^' in "a - **"
}
        The \code{**} operator is defined to be the same primitive
        as \code{^}, which is associated with the name \code{^}, and
        hence dispatches on methods for \code{^} even if called via
        \code{**}.
  \item D
}}

  \subsection{NEW FEATURES FROM LATER R CORE VERSIONS}{
  \itemize{
  \item From R-3.0.0: The \code{srcfile} argument to \code{parse()} may now 
        be a character string, to be used in error messages.
  \item The facilities for recording detailed parsing information
        from R-3.0.0 are now implemented in pqR, as part of the
        rewrite of the parser, along with the
        extension to provide partial parse information when a syntax error
        occurs that was introduced in R-3.0.2.  See help on \code{parse}
        and \code{getParseData} for details.
  \item C
  \item From R-2.15.2: On Windows, the C stack size has been increased 
        to 64MB (it has been 10MB since the days of 32MB RAM systems).
}}

  \subsection{PERFORMANCE IMPROVEMENTS}{
  \itemize{
  \item A
  \item B
  \item C
  \item D
}}

  \subsection{BUG FIXES MATCHING THOSE IN LATER R CORE VERSIONS}{
  \itemize{
  \item From R-2.15.1: Names containing characters which need to be escaped 
        were not deparsed properly (PR#14846).  Fixed in pqR partly based
        on R Core fix.
  \item From R-2.15.2: When given a 0-byte file and asked to keep source
        references, parse() read input from stdin() instead.
  \item From R-2.15.3: Expressions involving user defined operators were not 
        always deparsed faithfully (PR#15179).  Fixed in pqR as part of
        the rewrite of the parser and deparser.
  \item From R-3.0.2: source() did not display filenames when reporting 
        syntax errors.
  \item From R-3.1.3: The parser now gives an error if a null character 
        is included in a string using Unicode escapes. (PR#16046)