@@ -1,0 +1,1 @@
+Add compatibility stubs for R_xlen_t, XLENGTH, etc.
